remove graal